tests/negative/runtime/arrayinsert_out_of_bounds/input.ci
void main() {
    int[] values = [1, 2, 3];
    arrayInsert(values, 5, 9);
}
